--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -4,6 +4,7 @@
     android:id="@+id/item_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="8dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
@@ -50,7 +51,7 @@
             android:text="@string/description"
             android:textColor="@color/colorTextBlack"
             android:textIsSelectable="true"
-            android:textSize="15sp"
+            android:textSize="13sp"
             app:fontFamily="sans-serif" />
 
         <com.google.android.material.chip.ChipGroup
